# gepetto-viewer

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .mergify.yml  .pre-commit-config.yaml  AUTHORS  CMakeLists.txt  COPYING  LICENSE  NEWS  README.md  flake.nix  package.xml  pyproject.toml
.github/workflows/: nix.yml  update-flake-lock.yml
cmake-module/: FindPythonQt.cmake  gepetto-viewer-plugin.cmake  osgqt.cmake  qt.cmake
doc/: CMakeLists.txt  Doxyfile.extra.in  architecture-constraint  cmake.dox  footer.html  header.html  package.css  package.dox.cmake  projection.tex
doc/main-page/: package.hh
doc/pictures/: archi.fig
include/Graphics/: GroupNode.h  LeafNodeBox.h  LeafNodeCapsule.h  LeafNodeCollada.h  LeafNodeCone.h  LeafNodeCylinder.h  LeafNodeFace.h  LeafNodeGround.h  LeafNodeLine.h  LeafNodeSphere.h  Node.h  URDFparser.h  WindowManager.h  config.h  macros.h
include/gepetto/gui/: action-search-bar.hh  bodytreewidget.hh  color-map.hh  config-dep.hh.in  fwd.hh  ledindicator.hh  mainwindow.hh  node-action.hh  osgwidget.hh  pick-handler.hh  plugin-interface.hh  pythonwidget.hh  qt-osg-keyboard.hh  safeapplication.hh  selection-event.hh  selection-handler.hh  settings.hh  shortcut-factory.hh  tree-item.hh  windows-manager.hh
include/gepetto/gui/dialog/: configuration.hh  dialogloadenvironment.hh  dialogloadrobot.hh  pluginmanagerdialog.hh
include/gepetto/python/: graphicrobot.hpp  graphicviewer.hpp  handler.hpp  python.hpp
include/gepetto/viewer/: blender-geom-writer.h  config-osg.h  fwd.h  group-node.h  leaf-node-arrow.h  leaf-node-box.h  leaf-node-capsule.h  leaf-node-collada.h  leaf-node-cone.h  leaf-node-cylinder.h  leaf-node-face.h  leaf-node-ground.h  leaf-node-light.h  leaf-node-line.h  leaf-node-mesh.h  leaf-node-point-cloud.h  leaf-node-sphere.h  leaf-node-xyzaxis.h  macros.h  node-drawable.h  node-property.h  node-rod.h  node-visitor.h  node.h  properties.h  roadmap-viewer.h  robot.h  transform-writer.h  urdf-parser.h  window-manager.h  windows-manager.h
include/gepetto/viewer/OSGManipulator/: FPSManipulator.h  keyboard-manipulator.h
plugins/: CMakeLists.txt
plugins/pluginskeleton/: CMakeLists.txt  plugin.cc  plugin.hh
plugins/pyqcustomplot/: CMakeLists.txt  decorator.cc  decorator.hh  plugin.cc  plugin.hh  qcpitemrichtext.hh  qcustomplot.cpp  qcustomplot.h
plugins/pyqcustomplot/qcustomplot-1.3.2/: changelog.txt  qcustomplot.cpp  qcustomplot.h
plugins/pyqcustomplot/qcustomplot-2.0.1/: changelog.txt  qcustomplot.cpp  qcustomplot.h
plugins/pyqcustomplot/wrapper/: qcp.hh
plugins/pyqgv/: CMakeLists.txt  decorator.cc  decorator.hh  plugin.cc  plugin.hh
pyplugins/: CMakeLists.txt
pyplugins/gepetto/gui/: blenderexport.py  intersection.py
res/: images.qrc
src/: CMakeLists.txt  GroupNode.cpp  LeafNodeBox.cpp  LeafNodeCapsule.cpp  LeafNodeCollada.cpp  LeafNodeCone.cpp  LeafNodeCylinder.cpp  LeafNodeFace.cpp  LeafNodeGround.cpp  LeafNodeLine.cpp  LeafNodeSphere.cpp  Node.cpp  URDFparser.cpp  WindowManager.cpp  blender-geom-writer.cc  group-node.cpp  gvtools.cpp  is-dirty-visitor.h  leaf-node-arrow.cpp  leaf-node-box.cpp  leaf-node-capsule.cpp  leaf-node-collada.cpp  leaf-node-cone.cpp  leaf-node-cylinder.cpp  leaf-node-face.cpp  leaf-node-ground.cpp  leaf-node-light.cpp  leaf-node-line.cpp  leaf-node-mesh.cpp  leaf-node-point-cloud.cpp  leaf-node-sphere.cpp  leaf-node-xyzaxis.cpp  leaf-node-xyzaxis.cpp.in  log.cc  log.hh  node-drawable.cpp  node-property.cpp  node-rod.cpp  node-visitor.cc  node.cpp  (+7 more)
src/OSGManipulator/: FPSManipulator.cpp  keyboard-manipulator.cpp
src/gui/: action-search-bar.cc  bodytreewidget.cc  ledindicator.cc  main.cc.in  mainwindow.cc  mainwindow.ui  node-action.cc  osgwidget.cc  pick-handler.cc  point-intersector.cc  point-intersector.hh  python-bindings.cc  python-bindings.hh  python-decorator.hh  pythonwidget.cc  safeapplication.cc  selection-event.cc  selection-handler.cc  settings.cc  shortcut-factory.cc  tree-item.cc  windows-manager.cc
src/gui/dialog/: configuration.cc  dialogloadenvironment.cc  dialogloadenvironment.ui  dialogloadrobot.cc  dialogloadrobot.ui  pluginmanagerdialog.cc  pluginmanagerdialog.ui
src/internal/: configuration.cc.in  configuration.hh
src/python/: module.cpp  python.cpp
tests/: CMakeLists.txt  gl.cpp  nodes.cpp  properties.cpp  safe-application.cpp  test.cpp  test.py
